# Keepass-access-libs

./: .gitignore  README.md  build-install.ps1  build-install.sh  provision-credential.bat  provision-credential.ps1  provision-runas.bat  test-kdbx.bat  write-port.bat
csharp/: CHANGELOG.md  KdbxCredentials.sln  README.md  USAGE.md
csharp/examples/GetField/: GetField.csproj  Program.cs
csharp/examples/GetPass/: GetPass.csproj  Program.cs
csharp/examples/Lookup/: Lookup.csproj  Program.cs
csharp/src/KdbxCredentials/: Database.cs  Entry.cs  Exceptions.cs  KdbxCredentials.csproj  PathParser.cs
csharp/src/KdbxCredentials/SecretStore/: ISecretStore.cs  LinuxSecretStore.cs  SecretStoreFactory.cs  WindowsSecretStore.cs
csharp/tests/: credential_manager_integration.ps1  systemd_creds_integration.sh
csharp/tests/KdbxCredentials.Tests/: DatabaseTests.cs  KdbxCredentials.Tests.csproj  LinuxSecretStoreTests.cs  PathParserTests.cs
csharp/tests/KdbxCredentials.Tests/data/: it-dept.kdbx
deploy/systemd/: README.md  kdbx-db-task.service  kdbx-db-task.sh  kdbx-db-task.timer
keepass-spec/: CONTENTS.md  CSHARP-NOTES.md  ERRORS.md  RUST-NOTES.md  SECURITY.md  SPEC.md
rust/kdbx-credentials/: CHANGELOG.md  Cargo.toml  README.md
rust/kdbx-credentials/examples/: getfield.rs  getpass.rs  lookup.rs
rust/kdbx-credentials/src/: error.rs  lib.rs  path.rs  secret_store.rs
rust/kdbx-credentials/tests/: credential_manager_integration.ps1  file_store_integration.sh  systemd_creds_integration.sh
rust/kdbx-credentials/tests/data/: test.kdbx
